[tool.poetry]
name = "model-store"
version = "0.1.0"
description = "Leveraging linkml for iSamples Core store"
authors = ["datadave <605409+datadavev@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
linkml-runtime = "^1.5.6"
sqlalchemy = "^2.0.21"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
