[tool.poetry]
name = "model-store"
version = "0.2.0"
description = "Leveraging linkml for iSamples Core store"
authors = ["datadave <605409+datadavev@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2"
rdflib = "^7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Install using "poetry self add poetry-bumpversion"
# Use e.g.: "poetry verision minor"
[tool.poetry_bumpversion.file."term_store/__init__.py"]
